[tool.poetry]
name = "bss"
version = "0.1.0"
description = ""
authors = ["viktor"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.23"
alembic = "^1.6.5"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.2.1"}
pyls-mypy = {git = "https://github.com/tomv564/pyls-mypy.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
